# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

UPDATER_TEST_ROOT = "//base/update/updater/test/unittest"

MODULE_OUTPUT_PATH = "updater/updater_test"

ohos_unittest("utils_test") {
  testonly = true
  module_out_path = MODULE_OUTPUT_PATH
  sources = [
    "json/utils_json_test.cpp",
    "json/utils_json_visitor_test.cpp",
    "utils_unittest.cpp",
  ]
  sources += [
    "//base/update/updater/utils/json/json_node.cpp",
    "//base/update/updater/utils/utils.cpp",
  ]
  include_dirs = [
    "include",
    "//base/update/updater/interfaces/kits/include/",
    "//base/update/updater/services/include/",
    "//base/update/updater/utils/include",
    "//base/update/updater/utils/json",
    "//base/update/updater/services/ui",
    "//base/update/updater/test/unittest",
    "//third_party/bounds_checking_function/include",
    "//base/update/updater/services/include/updater",
    "//third_party/cJSON",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
  ]
  deps = [
    "//base/update/updater/interfaces/kits/misc_info:libmiscinfo",
    "//base/update/updater/services/fs_manager:libfsmanager",
    "//base/update/updater/services/log:libupdaterlog",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/cJSON:cjson",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  defines = [ "UPDATER_UT" ]
  configs = [ "$UPDATER_TEST_ROOT:utest_config" ]
  install_enable = true
  part_name = "updater"
}
